# local_cp

./: README.md  pyproject.toml
examples/: benchmark_runtime.ipynb  tutorial_conformal_prediction.ipynb
local_cp/: batch_eval.py
